k8s/default-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: default
  labels:
    istio-injection: enabled
