k8s/code-repo-tool-manager-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-repo-tool-manager-v2
spec:
  selector:
    matchLabels:
      app: code-repo-tool-manager
      version: v2
  template:
    metadata:
      labels:
        app: code-repo-tool-manager
        version: v2
    spec:
      containers:
        - name: code-repo-tool-manager
          image: code-repo-tool-manager
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 400m
              memory: 300Mi
