k8s/build-tool-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: build-tool-manager
spec:
  selector:
    matchLabels:
      app: build-tool-manager
  template:
    metadata:
      labels:
        app: build-tool-manager
    spec:
      containers:
        - name: build-tool-manager
          image: build-tool-manager
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 400m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: build-tool-manager
spec:
  type: ClusterIP
  selector:
    app: build-tool-manager
  ports:
  - port: 8000
    targetPort: 8080
