k8s/camel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camel
spec:
  selector:
    matchLabels:
      app: camel
  template:
    metadata:
      labels:
        app: camel
    spec:
      containers:
        - name: camel
          image: camel
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 400m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: camel
spec:
  type: ClusterIP
  selector:
    app: camel
  ports:
  - port: 8080
    targetPort: 8080
