k8s/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
#  - "devops.example.com"
  - "*"
  gateways:
  - devops-gateway
#  - mesh # internal request 도 virtual service의 정책을 따르도록 한다.
  http:
  - match:
    - uri:
        prefix: /api/backend
    route:
      - destination:
          port:
            number: 8080
          host: backend
##########
  - match:
    - uri:
        prefix: /api/camel
    route:
      - destination:
          port:
            number: 8080
          host: camel
##########
  - match:
    - uri:
        prefix: /api/build-tool-manager
    route:
      - destination:
          port:
            number: 8080
          host: build-tool-manager
          subset: v1
        weight: 75
      - destination:
          port:
            number: 8080
          host: build-tool-manager
          subset: v2
        weight: 25
    ##########
  - match:
    - uri:
        prefix: /api/code-repo-tool-manager
    route:
      - destination:
          port:
            number: 8080
          host: code-repo-tool-manager
##########
  - match:
    - uri:
        prefix: /api/image-repo-tool-manager
    route:
      - destination:
          port:
            number: 8080
          host: image-repo-tool-manager
    ##########
  - match:
      - uri:
          prefix: /auth
    route:
      - destination:
          port:
            number: 8080
          host: keycloak

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: build-tool-manager-destination
spec:
  host: build-tool-manager
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
