k8s/authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-example"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  jwtRules:
  - issuer: "http://34.64.220.162:8080/auth/realms/devops"
    jwksUri: "http://34.64.220.162:8080/auth/realms/devops/protocol/openid-connect/certs"
    outputPayloadToHeader: x-jwt
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: policy1
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: ALLOW
  rules:
    - when:
        - key: request.auth.claims[email]
          values: ["*@samsung.com", "*@partner.samsung.com"]
#    - from:
#        - source:
#            notRequestPrincipals: ["auth.claims[email]"]
